<resources>
    <string name="app_name">Shabd</string>
    <string name="title_home">Home</string>
    <string name="title_learn">Play</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_settings">Settings</string>
    <string name="title_quick">Quick</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome To Shabd</string>
    <string name="Overview_content">Autism is a complex neurobehavioral condition that includes impairments in social interaction and developmental language and communication skills combined with rigid, repetitive behavior". To overcome this problem we came up with an educational app that helps this people to get educated via a completely free platform. This app can also be used to educated the kids. The UI of the app is user friendly. The app acts like an all time friend for the autism patients, who are often neglected by the society.</string>
    <string name="shabd">SHABD</string>
    <string name="overview">Overview</string>
    <string name="developer">Developer</string>
    <string name="submit">Submit</string>
    <string name="url" translatable="false">https://googledictionaryapi.eu-gb.mybluemix.net/?define="</string>
    <string name="query" translatable="false">"</string>
    <string-array name="alphabets">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>

    </string-array>
    <string name="default_notification_channel_id" translatable="false">notify</string>
    <string name="english" translatable="false">E</string>
    <string name="hindi" translatable="false">H</string>
    <string name="play_draw">Draw</string>
    <string name="update_setting">Update Data</string>
    <string name="notification_setting">Daily Notifications</string>
    <string name="language_setting">Language and Voice</string>
    <string name="logout_setting">Logout</string>
    <string name="about_setting">About Shabd</string>
    <string name="rate_setting">Rate and Review</string>
    <string name="play_play_text">Play Piano</string>
    <string name="story_text">Listen stories</string>
    <string name="undo">Undo </string>
    <string name="stroke_increase">SW+ </string>
    <string name="stroke_decrease">SW- </string>
    <string name="color">Color </string>
    <string-array name="draw_items">
        <item>Draw an apple</item>
        <item>Draw a ball</item>
        <item>Draw a flower</item>
        <item>Draw a cap </item>
        <item>Draw a bottle</item>
        <item>Draw a book</item>
        <item>Draw a bird</item>
        <item>Draw a bat</item>
        <item>Draw a pen</item>
        <item>Draw a car</item>
    </string-array>
</resources>