<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dictionary"
        android:icon="@drawable/ic_dictionary_black_24dp"
        android:title="@string/title_dictionary" />

    <item
        android:id="@+id/navigation_learn"
        android:icon="@drawable/ic_learn_black_24dp"
        android:title="@string/title_learn" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_quick"
        android:icon="@drawable/ic_quick_black_24dp"
        android:title="@string/title_quick" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
