<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Learn.Drawing.DrawingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp">

        <Button
            android:id="@+id/strokeWidthPlusButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_speakbar"
            android:layout_height="wrap_content"
            android:text="@string/stroke_increase" />

        <Button
            android:id="@+id/strokeWidthMinusButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_speakbar"
            android:layout_height="wrap_content"
            android:text="@string/stroke_decrease" />

        <Button
            android:id="@+id/changeColorButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_speakbar"
            android:layout_height="wrap_content"
            android:text="@string/color" />

        <Button
            android:id="@+id/undoButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_speakbar"
            android:layout_height="wrap_content"
            android:text="@string/undo" />
        <Button
            android:id="@+id/submit1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_speakbar"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:visibility="gone"/>

    </LinearLayout>

    <me.panavtec.drawableview.DrawableView
        android:id="@+id/paintView"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttons"/>
</RelativeLayout>